--- a/PeopleSearchApplication/Properties/launchSettings.json
+++ b/PeopleSearchApplication/Properties/launchSettings.json
@@ -3,14 +3,14 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "",
+      "applicationUrl": "http://localhost:55962/",
       "sslPort": 44361
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "People Search": {
-      "commandName": "Project",
+      "commandName": "IISExpress",
       "workingDirectory": "\\Users\\justi\\source\\repos\\PeopleSearchApplication\\PeopleSearchApplication",
       "launchBrowser": true
     }
